@@ -45,7 +45,8 @@ ANGOBJS = \
 	main-cap.o main-gcu.o main-x11.o main-xaw.o main-win.o main.o \
 	main-gtk.o main-lsl.o main-sla.o main-vcs.o main-xpj.o maid-x11.o \
 	script.o l-monst.o l-object.o l-player.o l-random.o l-ui.o l-misc.o l-spell.o l-dynamic.o \
-	$(LUAOBJS)
+	$(LUAOBJS) \
+	$(BORGOBJS)
 
 ##
 ## Following are some "system" definitions
@@ -71,6 +72,7 @@ ANGOBJS = \
 
 # This is your compiler - gcc is normal, with a default level of warnings.
 CC = gcc
+OPTIMISATION = -O2 -pipe
 WARNINGS = -Wall
 
 ## OPTION: The system which Nangband is being run on has mkstemp().
@@ -108,7 +110,7 @@ default: x11-gcu
 # "new curses" library instead of the "old curses" library, and
 # you may have to add "-I/usr/include/ncurses" to the "CFLAGS".
 #
-x11-gcu: CFLAGS = -I/usr/X11R6/include -I/usr/include/ncurses -O2 \
+x11-gcu: CFLAGS = -I/usr/X11R6/include -I/usr/include/ncurses \
          -DUSE_X11 -DUSE_GCU -DUSE_NCURSES
 x11-gcu: LIBS = -L/usr/X11R6/lib -lX11 -lncurses
 x11-gcu: nangband
@@ -118,7 +120,7 @@ x11-gcu: nangband
 #
 # To compile, use the "only-x11" target.
 #
-only-x11: CFLAGS = -O1 -pipe -g -D"USE_X11"
+only-x11: CFLAGS = -g -D"USE_X11"
 only-x11: LIBS = -L/usr/X11R6/lib -lX11
 only-x11: nangband
 
@@ -131,7 +133,7 @@ only-x11: nangband
 # "new curses" library instead of the "old curses" library, and
 # you may have to add "-I/usr/include/ncurses" to the "CFLAGS".
 #
-only-gcu: CFLAGS = -Wall -O1 -pipe -g -D"USE_GCU"
+only-gcu: CFLAGS = -g -D"USE_GCU"
 only-gcu: LIBS = -lncurses -ltermcap
 only-gcu: nangband
 
@@ -146,27 +148,27 @@ only-gcu: nangband
 #
 # `gtk-config *` takes care of the GTK/X11 includes.
 #
-gtk: CFLAGS = -Wall -O `gtk-config --cflags` -g -DUSE_GTK -DUSE_GCU -DUSE_X11
+gtk: CFLAGS = `gtk-config --cflags` -g -DUSE_GTK -DUSE_GCU -DUSE_X11
 gtk: LIBS = `gtk-config --libs` -lcurses -ltermcap
 gtk: nangband
 
 ##
 ## Variation -- Use "main-xaw.c" instead of "main-x11.c"
 ##
-#CFLAGS = -Wall -O1 -pipe -g -D"USE_XAW" -D"USE_GCU"
+#CFLAGS = -g -D"USE_XAW" -D"USE_GCU"
 #LIBS = -lXaw -lXmu -lXt -lX11 -lcurses -ltermcap
 
 ##
 ## Variation -- Use "main-cap.c" instead of "main-gcu.c"
 ##
-#CFLAGS = -Wall -O1 -pipe -g -D"USE_X11" -D"USE_CAP"
+#CFLAGS = -g -D"USE_X11" -D"USE_CAP"
 #LIBS = -lX11 -ltermcap
 
 
 ##
 ## Variation -- Only work on simple vt100 terminals
 ##
-#CFLAGS = -Wall -O1 -pipe -g -D"USE_CAP" -D"USE_HARDCODE"
+#CFLAGS = -g -D"USE_CAP" -D"USE_HARDCODE"
 
 
 ##
@@ -174,7 +176,7 @@ gtk: nangband
 ##
 ## Allows the use of Angband in the console using curses.
 ##
-#CFLAGS = -Wall -O2 -fno-strength-reduce -pipe -D"USE_GCU"
+#CFLAGS = -fno-strength-reduce -D"USE_GCU"
 #LIBS = -lcurses
 
 
@@ -183,7 +185,7 @@ gtk: nangband
 ##
 ## Allows the use of Angband in X11 using the Athena Widget set.
 ##
-#CFLAGS = -Wall -O2 -fno-strength-reduce -pipe -g -D"USE_XAW"
+#CFLAGS = -fno-strength-reduce -g -D"USE_XAW"
 #LIBS = -L/usr/X11R6/lib -lXaw -lXext -lSM -lICE -lXmu -lXt -lX11
 
 
@@ -191,7 +193,7 @@ gtk: nangband
 ## Variation -- this might work better than the suggestion above
 ##
 #CFLAGS = -I/usr/include/ncurses \
-#         -Wall -O2 -fno-strength-reduce -fomit-frame-pointer \
+#         -fno-strength-reduce -fomit-frame-pointer \
 #         -D"USE_X11" -D"USE_GCU" \
 #         -D"USE_TPOSIX" -D"USE_CURS_SET"
 #LIBS = -lX11 -lncurses
@@ -201,14 +203,14 @@ gtk: nangband
 ##
 ## Variation -- compile for Solaris
 ##
-#CFLAGS = -Wall -O1 -pipe -g -D"USE_X11" -D"USE_GCU" -D"SOLARIS"
+#CFLAGS = -g -D"USE_X11" -D"USE_GCU" -D"SOLARIS"
 #LIBS = -lX11 -lsocket -lcurses
 
 
 ##
 ## Variation -- compile for SGI Indigo runnig Irix
 ##
-#CFLAGS = -Wall -O1 -pipe -g -D"USE_X11" -D"USE_GCU" -D"SGI"
+#CFLAGS = -g -D"USE_X11" -D"USE_GCU" -D"SGI"
 #LIBS = -lX11 -lcurses -ltermcap -lsun
 
 
@@ -216,7 +218,7 @@ gtk: nangband
 ## Variation -- compile for Dec ALPHA OSF/1 v2.0
 ##
 #CC     = cc
-##CFLAGS = -std -O -g3 -Olimit 4000 -D"USE_X11" -D"USE_GCU"
+##CFLAGS = -std -g3 -Olimit 4000 -D"USE_X11" -D"USE_GCU"
 #CFLAGS = -std -g -D"USE_X11" -D"USE_GCU"
 #LIBS   = -lX11 -lcurses -ltermcap -lrpcsvc
 
@@ -224,21 +226,21 @@ gtk: nangband
 ##
 ## Variation -- compile for Interactive Unix (ISC) systems
 ##
-#CFLAGS = -Wall -O1 -pipe -g -D"USE_X11" -D"USE_GCU" -D"ISC"
+#CFLAGS = -g -D"USE_X11" -D"USE_GCU" -D"ISC"
 #LIBS = -lX11 -lcurses -lnsl_s -linet -lcposix
 
 
 ##
 ## Variation -- Support fat binaries under NEXTSTEP
 ##
-#CFLAGS = -Wall -O1 -pipe -g -D"USE_GCU" -arch m68k -arch i386
+#CFLAGS = -g -D"USE_GCU" -arch m68k -arch i386
 #LIBS = -lcurses -ltermcap
 
 
 ##
 ## Variation -- Support Linux + SVGA library
 ##
-#CFLAGS = -Wall -O2 -fno-strength-reduce -D"USE_LSL"
+#CFLAGS = -fno-strength-reduce -D"USE_LSL"
 #LIBS = -lz -lvgagl -lvga
 
 
@@ -249,7 +251,7 @@ gtk: nangband
 #
 # Note that this module is not well-tested.
 #
-vcs: CFLAGS = -Wall -O2 -fno-strength-reduce -D"USE_VCS"
+vcs: CFLAGS = -fno-strength-reduce -D"USE_VCS"
 vcs: LIBS =
 
 #
@@ -257,7 +259,7 @@ vcs: LIBS =
 #
 # To compile, use the "s-lang" target.
 #
-s-lang: CFLAGS = -Wall -O2 -fno-strength-reduce -D"USE_SLA" -I/usr/include/slang
+s-lang: CFLAGS = -fno-strength-reduce -D"USE_SLA" -I/usr/include/slang
 s-lang: LIBS = -lslang
 
 
@@ -265,10 +267,9 @@ s-lang: LIBS = -lslang
 # Dependency rules
 #
 
-nangband: CFLAGS += $(HAVE_MKSTEMP) $(WARNINGS) $(ALLOW_BORG)
-nangband: LINKFLAGS += $(HAVE_MKSTEMP) $(WARNINGS) $(ALLOW_BORG)
-nangband: $(ANGOBJS) $(BORGOBJS)
-	$(CC) $(CFLAGS) $(LINKFLAGS) $(LDFLAGS) -o nangband $(ANGOBJS) $(BORGOBJS) $(LIBS)
+nangband: CFLAGS += $(HAVE_MKSTEMP) $(WARNINGS) $(ALLOW_BORG) $(OPTIMISAION)
+nangband: $(ANGOBJS)
+	$(CC) $(CFLAGS) $(LIBS) $(LINKFLAGS) $(LDFLAGS) -o nangband $(ANGOBJS)
 
 lua/tolua: $(TOLUAOBJS)
 	$(CC) -o lua/tolua $(TOLUAOBJS) $(LDFLAGS) $(LUALIBS)
