@@ -1490,7 +1490,7 @@ cptr option_text[OPT_MAX] =
 	"smart_packs",				/* OPT_smart_packs */
 	"view_player_colour",			/* OPT_view_player_colour */
 	"view_equippy_chars",                   /* OPT_view_equippy_chars */
-	NULL,						/* xxx */
+	"view_monster_light",			/* xxx */
 	NULL,						/* xxx */
 	NULL,						/* xxx */
 	NULL,						/* xxx */
@@ -1753,7 +1753,7 @@ cptr option_desc[OPT_MAX] =
 	"Monsters act smarter in groups (v.slow)",	/* OPT_smart_packs */
 	"View special player colours",					/* OPT_view_player_colour */
 	"Display equippy chars",                       /* OPT_view_equippy_chars */
-	NULL,										/* xxx */
+	"Show monster light",				/* xxx */
 	NULL,										/* xxx */
 	NULL,										/* xxx */
 	NULL,										/* xxx */
@@ -2017,7 +2017,7 @@ const bool option_norm[OPT_MAX] =
 	FALSE,		/* OPT_smart_packs */
 	TRUE,		/* OPT_view_player_colour */
 	TRUE,		/* OPT_view_equippy_chars */
-	FALSE,		/* xxx */
+	TRUE,		/* OPT_view_monster_light */
 	FALSE,		/* xxx */
 	FALSE,		/* xxx */
 	FALSE,		/* xxx */
@@ -2323,10 +2323,10 @@ const byte option_page[OPT_PAGE_MAX][OPT_PAGE_PER] =
 		OPT_view_special_light,
 		OPT_view_player_colour,
 		OPT_view_equippy_chars,
+		OPT_view_monster_light,
  		OPT_center_player,
  		OPT_run_avoid_center,
 		OPT_show_piles,
-		255,
 		255,
 		255,
 		255
